--- a/src/app/Auth/Login/login.component.html
+++ b/src/app/Auth/Login/login.component.html
@@ -31,7 +31,7 @@
         >Password is required</mat-error
       >
     </mat-form-field>
-    <p *ngIf="notFoundError">User not found</p>
+    <p *ngIf="notFoundError" style="color: red">User not found</p>
     <button mat-flat-button color="accent">Submit</button>
 
     <h5 class="already-container">
