--- a/src/app/Home/BtnEdit/btnEdit.component.html
+++ b/src/app/Home/BtnEdit/btnEdit.component.html
@@ -1,11 +1,20 @@
-<form [formGroup]="UpdateForm" (ngSubmit)="handleUpdate()">
-  <mat-form-field appearance="fill">
-    <mat-label>Value</mat-label>
-    <input matInput formControlName="value" />
-  </mat-form-field>
+<mat-card>
+  <h2>Update Form</h2>
+  <form [formGroup]="UpdateForm" (ngSubmit)="handleUpdate()">
+    <mat-form-field appearance="fill">
+      <mat-label>Value</mat-label>
+      <input matInput formControlName="value" />
+    </mat-form-field>
 
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button type="submit" mat-button [mat-dialog-close]="true" cdkFocusInitial>
-    Update
-  </button>
-</form>
+    <button mat-button mat-dialog-close>Cancel</button>
+    <button
+      type="submit"
+      mat-button
+      [mat-dialog-close]="true"
+      cdkFocusInitial
+      color="accent"
+    >
+      Update
+    </button>
+  </form>
+</mat-card>
