--- a/src/app/Home/inputEdit/inputEdit.component.html
+++ b/src/app/Home/inputEdit/inputEdit.component.html
@@ -1,15 +1,30 @@
-<form [formGroup]="UpdateForm" (ngSubmit)="handleUpdate()">
-  <mat-form-field appearance="fill">
-    <mat-label>Name</mat-label>
-    <input matInput formControlName="name" />
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Label</mat-label>
-    <input matInput formControlName="label" />
-  </mat-form-field>
-
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button type="submit" mat-button [mat-dialog-close]="true" cdkFocusInitial>
-    Update
-  </button>
-</form>
+<mat-card>
+  <h2>Update Form</h2>
+  <form [formGroup]="UpdateForm" (ngSubmit)="handleUpdate()">
+    <mat-form-field appearance="fill">
+      <mat-label>Name</mat-label>
+      <input matInput formControlName="name" />
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="fill">
+      <mat-label>Label</mat-label>
+      <input matInput formControlName="label" />
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="fill">
+      <mat-label>Type</mat-label>
+      <input matInput formControlName="type" />
+    </mat-form-field>
+    <br />
+    <button mat-button mat-dialog-close>Cancel</button>
+    <button
+      type="submit"
+      mat-button
+      [mat-dialog-close]="true"
+      cdkFocusInitial
+      color="accent"
+    >
+      Update
+    </button>
+  </form>
+</mat-card>
