--- a/src/app/Home/formTable/formTable.component.html
+++ b/src/app/Home/formTable/formTable.component.html
@@ -8,26 +8,45 @@
 >
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef>No.</th>
-    <td
-      mat-cell
-      *matCellDef="let element"
-      (click)="handlePreviewInTable(element.formData)"
-    >
+    <td mat-cell *matCellDef="let element">
       {{ element.id }}
     </td>
   </ng-container>
 
   <ng-container matColumnDef="fileName">
     <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td
-      mat-cell
-      *matCellDef="let element"
-      (click)="handlePreviewInTable(element.formData)"
-    >
+    <td mat-cell *matCellDef="let element">
       {{ element.fileName }}
     </td>
   </ng-container>
-
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let element">
+      <div>
+        <mat-icon
+          class="pink-txt-color"
+          style="margin-right: 1rem"
+          (click)="handleFormRowUpdate(element)"
+          color="accent"
+          >edit</mat-icon
+        >
+        <mat-icon
+          class="pink-txt-color"
+          style="margin-right: 1rem"
+          (click)="deleteRowFromTable(element.id)"
+          color="accent"
+          >delete</mat-icon
+        >
+        <mat-icon
+          class="pink-txt-color"
+          style="margin-right: 1rem"
+          (click)="handlePreviewInTable(element.formData)"
+          color="accent"
+          >preview</mat-icon
+        >
+      </div>
+    </td>
+  </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
