form-builder-with-json

--- a/src/app/Home/BtnEdit/btnEdit.component.html
+++ b/src/app/Home/BtnEdit/btnEdit.component.html
@@ -6,10 +6,10 @@
       <input matInput formControlName="value" />
     </mat-form-field>
 
-    <button mat-button mat-dialog-close>Cancel</button>
+    <button mat-raised-button mat-dialog-close>Cancel</button>
     <button
       type="submit"
-      mat-button
+      mat-raised-button
       [mat-dialog-close]="true"
       cdkFocusInitial
       color="accent"
