--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <p
       *ngIf="authService.isLogin"
       (click)="handleLogut()"
-      style="display: inline-block; cursor: pointer; color: #ff4081"
+      style="display: inline-block; cursor: pointer; color: #fff"
     >
       Logout
     </p>
