--- a/src/app/Home/home.component.css
+++ b/src/app/Home/home.component.css
@@ -4,12 +4,14 @@
   margin: 0 25px 25px 0;
   display: inline-block;
   vertical-align: top;
+  background-color: #ffc670;
+  opacity: 1;
 }
 
 .example-list {
   border: solid 1px #ccc;
   min-height: 60px;
-  background: white;
+
   border-radius: 4px;
   overflow: hidden;
   display: block;
@@ -25,7 +27,8 @@
   justify-content: space-between;
   box-sizing: border-box;
   cursor: move;
-  background: white;
+  background: #ffc670;
+  opacity: 1;
   font-size: 14px;
 }
 
@@ -50,4 +53,18 @@
 
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.row {
+  margin: 3%;
+  display: flex;
+  justify-content: space-between;
+  background-color: #ffc670;
+  opacity: 1;
+}
+.col {
+  padding: 2% 5%;
+}
+.custom-mat-card {
+  background-color: #ffc670;
 }
