--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,10 @@
 .navbar {
   justify-content: space-between;
+  background-color: #0e1924;
 }
 .navbar a {
   text-decoration: none;
   margin-right: 1rem;
   cursor: pointer;
-  color: #ff4081;
+  color: #fff;
 }
