integrating app data to home

--- a/src/app/form-builder/btn-edit/btn-edit.component.html
+++ b/src/app/form-builder/btn-edit/btn-edit.component.html
@@ -2,8 +2,8 @@
   <h2>Update Form</h2>
   <form [formGroup]="UpdateForm" (ngSubmit)="handleUpdate()">
     <mat-form-field appearance="fill">
-      <mat-label>Value</mat-label>
-      <input matInput formControlName="value" />
+      <mat-label>Name</mat-label>
+      <input matInput formControlName="name" />
     </mat-form-field>
 
     <button mat-raised-button mat-dialog-close>Cancel</button>
